# secret-santa

./: .gitignore  .pylintrc  LICENSE  demo.txt  pyproject.toml  settings.py  setup.cfg  setup.py  ss.py
src/secret_santa/: __init__.py  main.py  settings.py
