[metadata]
name = secret-santa
description = A custom secret santa package.
author = noahgill409@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    secret_santa
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
bedevere = py.typed

[flake8]
max-line-length = 79
docstring-convention=numpy
